Revision history for Mojolicious-Plugin-AssetPack

0.05
       * Bundling JavaScript::Minifier::XS and CSS::Minifier::XS

0.0402   Tue Nov 12 21:17:34 2013
       * Will select the latest processed file when preprocessor is missing

0.0401   Thu Oct 31 21:09:56 2013
       * Fix cleanup of files without md5

0.04     Thu Oct 31 18:57:22 2013
       * Add support for custom out_dir
       * Fix cannot lookup preprocessor based on moniker extension

0.03     Mon Oct 28 18:31:03 2013
       * Use md5sum instead of timestamp in filenames

0.0201   Thu Oct 10 20:10:25 2013
       * Fix need to change back to previous working dir

0.02     Tue Sep 24 09:17:43 2013
       * Will only write asset files if the preprocessors exists

0.0102   Sun Sep 15 15:15:37 2013
       * Fix AssetPack in embedded apps

0.0101   Sun Sep 15 14:26:29 2013
       * Fix t/compress.t

0.01     Sun Sep 15 14:20:22 2013
       * Add "asset" helper
       * Add support for chained preprocessors
       * Add default preprocessors for js, css, scss and less
       * Can expand from moniker to multiple script/link tags
       * Can compress multiple files to one moniker asset