@@ -14,7 +14,7 @@ In your application:
 
   use Mojolicious::Lite;
 
-  plugin AssetPack => { rebuild => 1 };
+  plugin 'AssetPack';
 
   # add a preprocessor
   app->asset->preprocessors->add(js => sub {
@@ -81,9 +81,8 @@ details.
 
 use Mojo::Base 'Mojolicious::Plugin';
 use Mojo::ByteStream 'b';
-use Mojo::Util qw( md5_sum slurp spurt );
+use Mojo::Util;
 use Mojolicious::Plugin::AssetPack::Preprocessors;
-use Fcntl qw( O_CREAT O_EXCL O_WRONLY );
 use File::Basename qw( basename );
 use File::Spec::Functions qw( catfile );
 
@@ -109,11 +108,13 @@ has preprocessors => sub { Mojolicious::Plugin::AssetPack::Preprocessors->new };
 
 =head2 rebuild
 
-Set this to true if the assets should created, even though they exist.
+Deprecated.
 
 =cut
 
-has rebuild => 0;
+sub rebuild {
+  warn "rebuild() has no effect any more. Will soon be removed."
+}
 
 =head1 METHODS
 
@@ -175,44 +176,54 @@ The result file will be stored in L</Packed directory>.
 
 sub process {
   my($self, $moniker) = @_;
-  my $assets = $self->{assets}{$moniker};
-  my $mode = $self->rebuild ? O_CREAT | O_WRONLY : O_CREAT | O_EXCL | O_WRONLY;
-  my $out_file = catfile $self->{out_dir}, $moniker;
-  my $doc = '';
-  my($fh, @missing);
+  my($md5_sum, $out, $out_file, @missing);
+  my $files = $self->{assets}{$moniker};
+  my $content = {};
 
-  for my $asset (@$assets) {
-    die "Missing valid extension from asset $asset" unless $asset =~ /\.(\w{1,4})$/;
-    push @missing, $asset unless @{ $self->preprocessors->subscribers($1) || [] };
+  # $files will contain full path after this map {}
+  $md5_sum = Mojo::Util::md5_sum(
+              join '', map {
+                my $file = $self->{static}->file($_);
+                $_ = $file->path if $file;
+                $content->{$_} = Mojo::Util::slurp($_);
+              } @$files
+             );
+
+  $out_file = $moniker;
+  $out_file =~ s/\.(\w{1,4})$/-$md5_sum.$1/;
+
+  if(-s catfile $self->{out_dir}, $out_file) {
+    $self->{log}->debug("Using existing asset for $moniker");
+    $self->{assets}{$moniker} = $out_file;
+    return $self;
+  }
+
+  for my $file (@$files) {
+    next if $file =~ /\.(\w{1,4})$/ and $self->preprocessors->has_subscribers($1);
+    push @missing, $file; # will also contain files without extensions
   }
 
   if(@missing) {
-    $self->{log}->debug("Missing preprocessors for @missing");
-    $self->_find_processed($moniker);
-    return;
-  }
-  if(!($fh = IO::File->new($out_file, $mode))) {
-    $self->{log}->debug("Could not write $out_file: $!");
-    $self->_find_processed($moniker);
-    return;
+    local $" = "\n- ";
+    die "AssetPack missing preprocessors:\n- @missing\n";
   }
 
-  for my $asset (@$assets) {
-    my $extension = $asset =~ /\.(\w{1,4})$/ ? $1 : '';
-    my $file = $self->{static}->file($asset);
-    my $text;
-
-    $file = $file ? $file->path : $asset;
-    $text = slurp $file;
-    $self->preprocessors->process($extension, $self, \$text, $file);
-    $doc .= $text;
-  }
-
-  $fh->truncate(0);
-  $fh->syswrite($doc);
-  $fh->close or die "close $out_file: $!";
   $self->_remove_processed($moniker) if $self->{cleanup};
-  $self->_rename_processed($moniker, md5_sum $doc);
+
+  Mojo::Util::spurt(
+    join('',
+      map {
+        /\.(\w{1,4})$/; # checked in @missing loop
+        $self->preprocessors->process($1, $self, \$content->{$_}, $_);
+        $content->{$_};
+      } @$files
+    ),
+    catfile($self->{out_dir}, $out_file)
+  );
+
+  $self->{log}->debug("Built asset for $moniker ($out_file)");
+  $self->{assets}{$moniker} = $out_file;
+  return $self;
 }
 
 =head2 register
@@ -221,7 +232,6 @@ sub process {
     cleanup => $bool, # default is true
     minify => $bool, # compress assets
     no_autodetect => $bool, # disable preprocessor autodetection
-    rebuild => $bool, # overwrite if assets exists
   };
 
 Will register the C<compress> helper. All arguments are optional.
@@ -231,9 +241,6 @@ have other web sites that need to access an old version of the minified files.
 
 "minify" will default to true if L<Mojolicious/mode> is "production".
 
-"rebuild" can be set to true to always rebuild the compressed files when the
-application is started. The default is to use the cached files.
-
 =cut
 
 sub register {
@@ -242,7 +249,6 @@ sub register {
   my $helper = $config->{helper} || 'asset';
 
   $self->minify($minify);
-  $self->rebuild($config->{rebuild} || 0);
   $self->preprocessors->detect unless $config->{no_autodetect};
 
   $self->{assets} = {};
@@ -273,7 +279,7 @@ sub _compile_css {
       (my $out = $in) =~ s/\.\w+$/.css/;
       my $text = slurp $in;
       $self->preprocessors->process($extension, $self, \$text, $in);
-      spurt $text, $out;
+      Mojo::Util::spurt($text, $out);
       1;
     } or do {
       $self->{log}->warn("Could not convert $original: $@");
@@ -313,17 +319,6 @@ sub _remove_processed {
     $self->{log}->debug("Removing $self->{out_dir}/$file");
     unlink catfile($self->{out_dir}, $file) or die "Could not unlink $self->{out_dir}/$file: $!";
   }
-}
-
-sub _rename_processed {
-  my($self, $moniker, $checksum) = @_;
-  my($name, $ext) = $moniker =~ m!^(.+)\.(\w+)$!;
-  my $source = catfile $self->{out_dir}, $moniker;
-  my $destination = catfile $self->{out_dir}, "$name-$checksum.$ext";
-
-  $self->{assets}{$moniker} = "$name-$checksum.$ext";
-  unlink $destination if -e $destination;
-  rename $source, $destination or die "Could not rename $source to $destination: $!";
 }
 
 =head1 AUTHOR
