@@ -11,9 +11,11 @@ BEGIN {
 
 plan skip_all => 'Not ready for alien host' unless $^O eq 'linux';
 
+unlink glob 't/public/packed/*';
+
 {
   use Mojolicious::Lite;
-  plugin 'AssetPack' => { minify => 1, rebuild => 1 };
+  plugin 'AssetPack' => { minify => 1 };
   app->asset('app.js' => '/js/a.js', '/js/already.min.js');
   get '/js' => 'js';
 }
@@ -24,7 +26,7 @@ my $t = Test::Mojo->new;
 
   $t->get_ok('/js')
     ->status_is(200)
-    ->content_like(qr{<script src="/packed/app-3ed8fc2cff5774822803ff18cc2c4487\.js".*}m)
+    ->content_like(qr{<script src="/packed/app-ebe7fb100ee204a3db3b8d11a3d46f78\.js".*}m)
     ;
 
   is int @main::run, 1, 'minify called once';
